[project]
name = "bollinger-bands-for-time-series-analysis-using-nat"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "pandas-datareader>=0.10.0",
    "plotly>=6.7.0",
    "prophet>=1.3.0",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
]
